<resources>
    <string name="app_name">Classroom</string>

    <string name="sign_out">Sign Out</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="username">username</string>
    <string name="status">Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="progress_uploading">Uploading…</string>
    <string name="upload_success">Successfully Uploaded</string>
    <string name="upload_failure">Error while uploading</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="download_success">Successfully Downloaded</string>
    <string name="download_failure">Failed to Download</string>


    <string name="classroom_profile_picture">Classroom Profile Picture</string>
    <string name="total">TOTAL</string>
    <string name="marks">MARKS</string>
    <string name="title">TITLE</string>
    <string name="roll_number">Roll Number</string>
    <string name="no_assignment_provided">No Assignment are provided in this class</string>
    <string name="no_assignment_are_uploaded">No Assignment are uploaded.</string>
    <string name="create_class_name">Class Name</string>
    <string name="join_class_button">Join</string>
    <string name="join">Join</string>
    <string name="type">Type :</string>
    <string name="join_class_roll_number">Roll Number</string>
    <string name="roll_num">Roll Number</string>
    <string name="enter_class_code_here">Enter class code here</string>
    <string name="enter_the_class_code">Enter the Class code</string>
    <string name="you_are_not_a_member_of_any_class">You are not a member of any Class.</string>
    <string name="main_create_class">main_create_class</string>
    <string name="title_ass">Title</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="description">description</string>
    <string name="registered_as">Registered As</string>
    <string name="_100">100</string>
    <string name="assignment_upload_button">assignment_upload_button</string>
    <string name="no_result_are_uploaded">No Result are uploaded.</string>
    <string name="examination_create_button">examination_create_button</string>
    <string name="type_a_message">Type a message...</string>
    <string name="send">send</string>
    <string name="teachers">Teachers</string>
    <string name="no_teacher_is_assigned_to_this_class">No Teacher is assigned to this class</string>
    <string name="students">Students</string>
    <string name="no_student_is_enrolled_in_this_class">No Student is enrolled in this class</string>
    <string name="name">Name :</string>
    <string name="student">Student</string>
    <string name="b16cs006">B16CS006</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="slide_upload_button">slide_upload_button</string>
</resources>
