<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.madd_eduhublk_it19011844.JoinClass">

    <TextView
        android:id="@+id/join_class_empty_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center_horizontal"
        android:text="@string/you_are_not_a_member_of_any_class"
        android:textColor="#938f8f"
        android:textSize="16sp"
        android:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/join_class_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/join_class_liner_layout"
        android:layout_width="381dp"
        android:layout_height="153dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="250dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/join_class_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_class_code"
            android:textColor="#000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/join_class_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_class_code_here"
            android:minHeight="48dp"
            android:textColor="#049c25"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/join_class_roll_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/roll_num"
            android:inputType="textCapCharacters"
            android:minHeight="48dp"
            android:textColorHint="#000000"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/join_class_text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="#000"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/join_class_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/join_class_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/btn_color"
        android:text="@string/join"
        android:textColor="@color/grey_100"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="341dp" />


</android.support.constraint.ConstraintLayout>
