<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".people.ClassMembersActivity">

    <TextView
        android:id="@+id/peoples_teacher_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teachers"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/peoples_teacher_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:maxHeight="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peoples_teacher_text_view" />

    <TextView
        android:id="@+id/peoples_teacher_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_teacher_is_assigned_to_this_class"
        android:textColor="#938f8f"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peoples_teacher_text_view" />

    <TextView
        android:id="@+id/peoples_students_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/students"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/peoples_teacher_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/peoples_students_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peoples_students_text_view" />

    <TextView
        android:id="@+id/peoples_students_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_student_is_enrolled_in_this_class"
        android:textColor="#938f8f"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peoples_students_text_view" />

</android.support.constraint.ConstraintLayout>
